# RngStreams

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: Publications.md  fig2.eps  streams4.tex
src/: RngStream.cpp  RngStream.h  main.cpp
src/share/: RngStream.cpp  RngStream.h
tests/: CMakeLists.txt  test2RngStream.res  testRngStream.cpp  utest-RngStream_augmentations.cpp  utest-RngStream_original.cpp
